              the image than the first.  Always broken (Pamrubber was new in
              Netpbm 10.54 (March 2011)).

              sunicontopnm, escp2topbm, mgrtopbm, ybmtopbm, pamcut, pbmpscale,
              pnmcat, pnmpad: Fix arithmetic overrun with ridiculously large
              image.

              pbmclean: Fix overallocation of memory (waste).

              libnetpbm: When validating computable size of width and height,
              allow for adding up to 10 instead of 2, to account for rounding
              up to a multiple of 8 in processing bit maps.

              Build: Don't attempt to build 'pamexec' on systems without
              Unix process management.  Bug introduced in Netpbm 10.94
              (March 2021) and supposedly fixed in 10.95, but not really.

21.09.25 BJH  Release 10.96.00

              pgmtoppm: Eliminate dependency on color dictionary when user
              does not specify any colors by name.

              pamstereogram: Fix crash with -xbegin=0.  Thanks Scott Pakin.
              Introduced in Netpbm 10.94.

21.06.30 BJH  Release 10.95.00

              pamtopng: Fix rejection of all BLACKANDWHITE_ALPHA images with
              message about wrong depth.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).  Thanks Karol Kosek
              <krkk@krkk.ct8.pl>.

              pamtopng: Fix failure with GRAYSCALE_ALPHA images with maxval
              less than 255.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).  Thanks Karol Kosek <krkk@krkk.ct8.pl>.
              
              pamtopng: Fix: treats all tuple types that start with BLA as
              BLACKANDWHITE.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).

              pamtopng: Fix -transparent option - program recognized
              -transparency instead.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).
