@@ -34,6 +34,8 @@ not yet  BJH  Release 10.97.00
 
               pbmclean: Fix overallocation of memory (waste).
 
+              libnetbm: Add pnm_writepamrowpart, pnm_formatPamtuples.
+
               libnetpbm: When validating computable size of width and height,
               allow for adding up to 10 instead of 2, to account for rounding
               up to a multiple of 8 in processing bit maps.
